# splitwise

./: .gitignore  LICENSE  README.md  create-testdata.sh  go.sh  python.sh  rust.sh
go/: go.mod  main.go  read.go  split.go  transaction.go
go/splitwise/: read.go  split.go  transaction.go
python/: generate_testdata.py  input.csv  pyproject.toml  split.py
python/src/splitwise/: split.py
rust/: Cargo.toml
rust/src/: main.rs
test_data/: input-large.csv  input-small.csv  input.csv
