[project]
name = "splitwise"
version = "0.0.1"
authors = [
  { name="Alex Mackay", email="alexandertmackay@hotmail.co.uk" },
]
description = "package for simplifying debts between a network of transacting participants"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ATMackay/splitwise/python"
"Bug Tracker" = "https://github.com/ATMackay/splitwise/python/issues"